# pathtracing

./: .gitignore  CMakeLists.txt  Camera.cu  Camera.cuh  Color.cu  Color.cuh  ColorC.cu  ColorC.cuh  ColorF.cu  ColorF.cuh  ConvMask.cu  ConvMask.cuh  Material.cu  Material.cuh  Matrix4.cu  Matrix4.cuh  Mesh.cu  Mesh.cuh  README.md  Renderer.cu  Renderer.cuh  Scene.cu  Scene.cuh  Screen.cu  Screen.cuh  Sphere.cu  Sphere.cuh  Texture.cu  Texture.cuh  Triangle.cpp  Triangle.h  Vector2.cu  Vector2.cuh  Vector3.cu  Vector3.cuh  convert.sh  loader.cuh  main.cu
